Updating stuff: - Moved test stuff to _/ rather than api/ - Moved some APISIX stuff to a middleware - Reworked logging to universally be "log" and to use "debug" (maybe not done yet tho) - Regenerated OpenAPI stuff
