# system_meta/urls.py
@@ -6,9 +6,6 @@ from rest_framework import routers
 from system_meta.views import (
     IntegratedSystemViewSet,
     ProductViewSet,
-    apisix_test_request,
-    authed_traefik_test_request,
-    traefik_test_request,
 )
 
 router = routers.DefaultRouter()
@@ -18,19 +15,4 @@ router.register(r"product", ProductViewSet)
 
 urlpatterns = [
     re_path("^", include(router.urls)),
-    re_path(
-        r"^apisix_test_request/$",
-        apisix_test_request,
-        name="apisix_test_request",
-    ),
-    re_path(
-        r"^traefik_test_request/$",
-        traefik_test_request,
-        name="traefik_test_request",
-    ),
-    re_path(
-        r"^authed_traefik_test_request/$",
-        authed_traefik_test_request,
-        name="authed_traefik_test_request",
-    ),
 ]
